# goxlr-utility

./: .gitignore  50-goxlr.rules  AI_POLICY.md  Cargo.toml  LICENSE  LICENSE-3RD-PARTY  README.md  README_NEW.md  ROADMAP.md  goxlr-utility.iss  goxlr-wireshark-plugin.lua
.github/: FUNDING.yml
audio/: Cargo.toml
audio/src/: audio.rs  buffered_recorder.rs  lib.rs  player.rs  recorder.rs  ringbuffer.rs
audio/src/cpal/: configuration.rs  cpal_config.rs  cpal_playback.rs  cpal_record.rs  mod.rs  playback.rs  record.rs
audio/src/pulse/: configuration.rs  mod.rs  playback.rs  pulse_config.rs  pulse_playback.rs  pulse_record.rs  record.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml  build.rs
client/src/: channels.rs  cli.rs  client.rs  faders.rs  lib.rs  main.rs  microphone.rs  runner.rs
daemon/: Cargo.toml  NOTES.md  build.rs  default_profile.xml
daemon/profiles/: DEFAULT.goxlr  DEFAULT.goxlrMicProfile
daemon/resources/: create-icons.sh  goxlr-daemon.rc  goxlr-utility.desktop  goxlr-utility.plist.xml  goxlr-utility.xpm  icon.icns
daemon/scripts/: goxlr-audio.sh
daemon/src/: audio.rs  cli.rs  communication.rs  device.rs  events.rs  files.rs  http_server.rs  main.rs  mic_profile.rs  primary_worker.rs  profile.rs  settings.rs  shutdown.rs  tts.rs
daemon/src/firmware/: firmware_file.rs  firmware_update.rs  mod.rs
daemon/src/platform/: default.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
daemon/src/platform/linux/: autostart.rs  mod.rs  sleep.rs
daemon/src/platform/macos/: core_audio.rs  device.rs  runtime.rs
daemon/src/servers/: http_server.rs  ipc_server.rs  mod.rs  server_packet.rs
daemon/src/tray/: event_manager.rs  ksni.rs  linux.rs  macos.rs  mod.rs  tao.rs  tray_icon.rs  windows.rs
daemon/web-content/: index.html
daemon/web-content/assets/: index--2ekqqmx.css  index-5sq1XGk0.css  index-6ys33kKy.js  index-B-EHT3Xz.css  index-B2dHnD1q.js  index-B5Hhj13e.js  index-BA9zglCQ.css  index-BETwCcvy.js  index-BJIEgl9q.css  index-BJM830Pw.js  index-BLHyPn-i.js  index-BRy4h8Ls.css  index-B_o6vY7L.css  index-BeAWxRq1.css  index-BeYrTawK.js  index-Bg9NjsQa.css  index-BvJWtUOg.css  index-C0-0ZYRL.js  index-C9GrIf8C.css  index-CVtFz4j5.css  index-C_ZGc9mS.css  index-Cq1-KORB.js  index-D18U4a-S.js  index-D45iCcci.js  index-DAaLsjqD.js  index-DJoEsKlO.js  index-DSerdL1s.js  index-Dm1PD6TQ.css  index-DpG1F25C.css  index-DxH_McBx.js  index-I3etZnyY.js  index-Ks8E9p_A.js  index-N8m41Z6U.css  index-RJZlAp77.js  index-S3dWxF8g.css  index-WZKLErJw.js  index-n9_0JV46.js  index-qzQs3z-N.css  index-ycK0PA-s.css
daemon/web-content/css/: app.025abf04.css  app.02c9dd15.css  app.03a6de29.css  app.0606f5bf.css  app.0743410e.css  app.0f1e0b15.css  app.188329f4.css  app.22d23f81.css  app.27ec87f5.css  app.2851e982.css  app.316596d4.css  app.39183e8d.css  app.39713654.css  app.3a47d583.css  app.3be01f47.css  app.3f210a92.css  app.3f38f60b.css  app.40bf5b83.css  app.41e6ed92.css  app.427c24fa.css  app.4380d8e8.css  app.43a6e760.css  app.4551fc9f.css  app.4e603da8.css  app.5447f0c6.css  app.55db1dd9.css  app.56de79ea.css  app.58a07b9b.css  app.5d5eac4a.css  app.64d3148a.css  app.6d0804e6.css  app.70b82393.css  app.7dcdd137.css  app.7e289724.css  app.7e45d5b0.css  app.82be665d.css  app.839d2f58.css  app.9344bf60.css  app.9417f7c2.css  app.a1bccc24.css  (+20 more)
daemon/web-content/js/: app.000e1674.js  app.000e1674.js.map  app.006d37da.js  app.006d37da.js.map  app.010d6265.js  app.010d6265.js.map  app.017c2267.js  app.017c2267.js.map  app.06617289.js  app.06617289.js.map  app.06e8e730.js  app.06e8e730.js.map  app.07b3eb47.js  app.07b3eb47.js.map  app.07eb9d92.js  app.07eb9d92.js.map  app.098de8f3.js  app.098de8f3.js.map  app.0bc22158.js  app.0bc22158.js.map  app.0e95c1b7.js  app.0e95c1b7.js.map  app.16ce6ef8.js  app.16ce6ef8.js.map  app.172569c7.js  app.172569c7.js.map  app.19926887.js  app.19926887.js.map  app.1a251ef9.js  app.1a251ef9.js.map  app.1b78e6dd.js  app.1b78e6dd.js.map  app.1bd16d0b.js  app.1bd16d0b.js.map  app.2227a26b.js  app.2227a26b.js.map  app.28f09dd0.js  app.28f09dd0.js.map  app.33de25c0.js  app.33de25c0.js.map  (+174 more)
defaults/: Cargo.toml
defaults/resources/: README.md
defaults/resources/mic-profiles/: DEFAULT.goxlrMicProfile
defaults/resources/presets/: Comms Radio.preset  HardTune Music.preset
defaults/resources/profiles/: Default - Red.goxlr  Default - Teal Blue.goxlr  Default.goxlr
defaults/src/: main.rs
firmware/: Cargo.toml
firmware/src/: main.rs
gui/: Cargo.toml  build.rs
gui/assets/: goxlr.ui  resources.qrc
gui/src/: client.rs  main.rs
initialiser/: Cargo.toml  README.md
initialiser/src/: main.rs
ipc/: Cargo.toml
ipc/src/: client.rs  device.rs  ipc_socket.rs  lib.rs  socket.rs  types.rs
ipc/src/clients/: mod.rs
ipc/src/clients/ipc/: ipc_client.rs  ipc_socket.rs  mod.rs
ipc/src/clients/web/: mod.rs  web_client.rs
launcher/: Cargo.toml  build.rs
launcher/resources/: goxlr-launcher.rc
launcher/src/: main.rs
profile/: Cargo.toml  README.md
profile/src/: components.rs  error.rs  lib.rs  main.rs  mic_profile.rs  microphone.rs  profile.rs
profile/src/components/: animation.rs  browser.rs  colours.rs  context.rs  echo.rs  effects.rs  fader.rs  gender.rs  hardtune.rs  megaphone.rs  mixer.rs  mute.rs  mute_chat.rs  pitch.rs  preset_writer.rs  reverb.rs  robot.rs  root.rs  sample.rs  scribble.rs  simple.rs
profile/src/components/submix/: linking_tree.rs  mix_routing_tree.rs  mod.rs  monitor_tree.rs  submixer.rs
profile/src/microphone/: compressor.rs  configuration.rs  equalizer.rs  equalizer_mini.rs  gate.rs  mic_setup.rs  ui_setup.rs
profile/test-data/: output.xml  profile.xml
scribbles/: Cargo.toml
scribbles/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
usb/: Cargo.toml
usb/src/: animation.rs  buttonstate.rs  channels.rs  channelstate.rs  colouring.rs  colours.rs  commands.rs  devices.rs  error.rs  faders.rs  goxlr.rs  lib.rs  microphone.rs  routing.rs
usb/src/device/: base.rs  mod.rs  usb.rs
usb/src/device/libusb/: device.rs
usb/src/device/tusb/: device.rs  mod.rs  tusbaudio.rs
(+883 files in other folders)
