[workspace]
resolver = "2"

members = [
    "launcher",
    "usb",
    "daemon",
    "audio",
    "client",
    "ipc",
    "types",
    "profile",
    "initialiser",
    "scribbles",
    "defaults",
]

[workspace.dependencies]
log = "0.4.28"

### Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

### Serialing / Deserialising
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }

### JSON Handling
serde_json = { version = "1.0.145" }
json-patch = "4.1.0"

### Async Handling
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"

### Enums
enumset = "1.1.10"
enum-map = { version = "2.7.3", features = ["serde"] }

### Messaging
interprocess = { version = "2.2.3", features = ["tokio"] }
byteorder = "1.5.0"

### CLI Parameter Handling
clap = { version = "4.5.48", features = ["derive"] }

### Directory Inclusion
include_dir = "0.7.4"

### Image Manipulation
image = "0.25.8"

### CFG handler
cfg-if = "1.0.3"

### USB Handler
rusb = "0.9.4"

### Lazy Statics
lazy_static = "1.5.0"

### Regular Expressions
fancy-regex = "0.16.2"

### Locate a binary on $PATH
which = "8.0.0"

### Web Requests
reqwest = { version = "0.12.23", default-features = false }

### Windows Specific
windows = "0.62.2"
winreg = "0.55.0"
windres = "0.2.2"

### Linux Specific
nix = "0.30.1"
