[package]
name = "goxlr-audio"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Symphonia for Audio Decoding..
symphonia = { version = "0.5.1", features = [ "wav", "mp3", "ogg"] }

# Hound for WAV Encoding..
hound = "3.5.0"

# Audio Normalisation
ebur128 = "0.1.6"

# Exceptions
anyhow = "1.0.65"

# Logging..
log = "0.4.17"
simplelog = "0.12.0"

# A wrapper around VecDeque to enforce length.
bounded-vec-deque = "0.1.1"

# Ring Buffer is now needed on all platforms.
rb = "0.4.1"

# Regular Expressions to help with device finding..
regex = "1.7.1"

# Under Linux, we'll use PulseAudio to output to the GoXLR..
# We can't find the specific audio channels using CPAL, so will ask Pulse instead.
[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

# Under Other Operating Systems, we'll use CPAL
[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15.1"
rubato = "0.12.0"
