[package]
name = "goxlr-cli"
version = "0.1.0"
edition = "2021"
default-run = "goxlr-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxlr-usb = {path = "../usb" }
goxlr-types = {path = "../types", features = ["clap"] }
simplelog = "0.11.1"
clap = { version = "3.0.0", features = ["derive"] }