[package]
name = "goxlr-client"
version = "1.2.0"
edition = "2021"
build = "build.rs"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "Allows control of a TC-Helicon GoXLR or GoXLR Mini, by interacting with a running daemon."
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "command-line-utilities"]

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "goxlr-client"
path = "src/bin/main.rs"

[[bin]]
name = "goxlr-client-quiet"
path = "src/bin/quiet.rs"

[dependencies]
goxlr-ipc = { path = "../ipc" }
goxlr-types = { path = "../types", features = ["clap"] }
tokio = { version = "1.39.1", features = ["full"] }
simplelog = "0.12.2"
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
strum = { version = "0.26.3" }
serde_json = { version = "1.0.120" }
tokio-serde = { version = "0.9.0", features = ["json"] }
interprocess = { version = "2.2.1", features = ["tokio"] }

[build-dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_complete = "4.5.4"
goxlr-types = { path = "../types", features = ["clap"] }
