[package]
name = "goxlr-client"
version = "1.2.2"
edition = "2021"
build = "build.rs"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "Allows control of a TC-Helicon GoXLR or GoXLR Mini, by interacting with a running daemon."
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "command-line-utilities"]

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "goxlr-client"
path = "src/bin/main.rs"

[[bin]]
name = "goxlr-client-quiet"
path = "src/bin/quiet.rs"

[dependencies]
goxlr-ipc = { path = "../ipc" }
goxlr-types = { path = "../types", features = ["clap"] }

# Common Workspace
anyhow = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
clap = { workspace = true }

[build-dependencies]
goxlr-types = { path = "../types", features = ["clap"] }

clap = { workspace = true }
clap_complete = "4.5.4"

