[package]
name = "goxlr-daemon"
version = "1.2.3"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "Allows control of a TC-Helicon GoXLR or GoXLR Mini, by maintaining an interaction with it over USB in the background."
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "command-line-utilities"]

[features]
tts = ["dep:tts"]

[dependencies]
goxlr-usb = { path = "../usb" }
goxlr-ipc = { path = "../ipc" }
goxlr-types = { path = "../types" }
goxlr-audio = { path = "../audio" }
goxlr-profile-loader = { path = "../profile" }
goxlr-scribbles = { path = "../scribbles" }

# Common Workspace
log = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
tokio = { workspace = true }
enumset = { workspace = true }
enum-map = { workspace = true }
interprocess = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
include_dir = { workspace = true }
cfg-if = { workspace = true }
lazy_static = { workspace = true }
fancy-regex = { workspace = true }
which = { workspace = true }

# Log File Handline
simplelog = "0.12.2"
file-rotate = "0.8.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# Project Directories
directories = "6.0.0"

# Linked Hashsets
ritelinked = "0.3.2"

# Opens a Browser or App
open = "5.3.2"

# Sampler Date Stamps
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

# File Matching
glob = "0.3.3"

# Text to Speech
tts = { version = "0.26.3", features = ["tolk"], optional = true }

# File Change Notification
notify = "8.2.0"

# Language Guessing
sys-locale = "0.3.2"

## HTTPd Server
actix-web = { version = "4.11.0", default-features = false, features = ["macros", "compress-brotli", "compress-gzip"] }
actix-ws = "0.3.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"

mime_guess = "2.0.5"
jsonpath-rust = "1.0.4"

# Used for Firmware Update Checks
reqwest = { workspace = true, features = ["stream", "rustls-tls"] }
xmltree = "0.11.0"
futures-util = "0.3.31"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["user"] }

# Under Linux, we use ksni for our tray icon..
[target.'cfg(target_os = "linux")'.dependencies]
ksni = { git = "https://github.com/FrostyCoolSlug/ksni.git" }
rust-ini = "0.21.0"
shell-words = "1.1.0"
zbus = "5.11.0"

# Under Windows and MacOS, we use tao's tray feature
[target.'cfg(target_os = "windows")'.dependencies]
image = { workspace = true }
sysinfo = { workspace = true }
winrt-toast-reborn = "0.3.8"
mslnk = "0.1.8"
dunce = "1.0.5"
windows-args = "0.2.0"

winreg = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Shutdown",
    "Win32_System_RemoteDesktop"
] }

[target.'cfg(target_os = "macos")'.dependencies]
image = { workspace = true }
shell-words = "1.1.0"

# Used for Tray Handling
objc2-app-kit = "0.3.0"
objc2-foundation = "0.3.0"
dispatch2 = "0.3.0"
objc2 = "0.6.0"

# Used for Aggregate Device Management
coreaudio-sys = "0.2.15"
core-foundation = "0.10.0"
io-kit-sys = "0.4.1"

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
directories = "6.0.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = { workspace = true }

[package.metadata.deb]
name = "goxlr-utility"
assets = [
    ["../target/release/goxlr-daemon", "usr/bin/", "755"],
    ["../target/release/goxlr-client", "usr/bin/", "755"],
    ["../target/release/goxlr-defaults", "usr/bin/", "755"],
    ["../target/release/goxlr-launcher", "usr/bin/", "755"],
    ["../50-goxlr.rules", "etc/udev/rules.d/", "644"],
    ["../daemon/resources/goxlr-utility.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["../daemon/resources/goxlr-utility-large.png", "usr/share/pixmaps/goxlr-utility.png", "644"],
    ["../daemon/resources/goxlr-utility.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["../daemon/resources/goxlr-utility.desktop", "usr/share/applications/", "644"],
    ["../deployment/deb/goxlr-client.bash", "usr/share/bash-completion/completions/", "644"],
    ["../deployment/deb/goxlr-client.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["../deployment/deb/_goxlr-client", "usr/share/zsh/vendor-completions/", "644"],
    ["../deployment/deb/goxlr-daemon.bash", "usr/share/bash-completion/completions/", "644"],
    ["../deployment/deb/goxlr-daemon.fish", "usr/share/fish/vendor_completions.d/", "644"],
    ["../deployment/deb/_goxlr-daemon", "usr/share/zsh/vendor-completions/", "644"],
]
maintainer-scripts = "../ci/distrib/DEBIAN/"
section = "sound"
priority = "optional"
depends = "$auto"
extended-description = """\
A utility for monitoring and controlling a TC-Helicon GoXLR or GoXLR Mini.
"""
revision = "1"

## cargo generate-rpm support..
[package.metadata.generate-rpm]
name = "goxlr-utility"
assets = [
    { source = "../target/release/goxlr-daemon", dest = "/usr/bin/goxlr-daemon", mode = "0755" },
    { source = "../target/release/goxlr-client", dest = "/usr/bin/goxlr-client", mode = "0755" },
    { source = "../target/release/goxlr-defaults", dest = "/usr/bin/goxlr-defaults", mode = "0755" },
    { source = "../target/release/goxlr-launcher", dest = "/usr/bin/goxlr-launcher", mode = "0755" },
    { source = "../50-goxlr.rules", dest = "/etc/udev/rules.d/50-goxlr.rules", mode = "0644" },
    { source = "../daemon/resources/goxlr-utility.png", dest = "/usr/share/icons/hicolor/48x48/apps/goxlr-utility.png", mode = "0644" },
    { source = "../daemon/resources/goxlr-utility-large.png", dest = "/usr/share/pixmaps/goxlr-utility.png", mode = "0644" },
    { source = "../daemon/resources/goxlr-utility.svg", dest = "/usr/share/icons/hicolor/scalable/apps/goxlr-utility.svg", mode = "0644" },
    { source = "../daemon/resources/goxlr-utility.desktop", dest = "/usr/share/applications/goxlr-utility.desktop", mode = "0644" },
    { source = "../deployment/deb/goxlr-client.bash", dest = "/usr/share/bash-completion/completions/goxlr-client.bash", mode = "0644" },
    { source = "../deployment/deb/goxlr-client.fish", dest = "/usr/share/fish/vendor_completions.d/goxlr-client.fish", mode = "0644" },
    { source = "../deployment/deb/_goxlr-client", dest = "/usr/share/zsh/vendor-completions/_goxlr-client", mode = "0644" },
    { source = "../deployment/deb/goxlr-daemon.bash", dest = "/usr/share/bash-completion/completions/goxlr-daemon.bash", mode = "0644" },
    { source = "../deployment/deb/goxlr-daemon.fish", dest = "/usr/share/fish/vendor_completions.d/goxlr-daemon.fish", mode = "0644" },
    { source = "../deployment/deb/_goxlr-daemon", dest = "/usr/share/zsh/vendor-completions/_goxlr-daemon", mode = "0644" },
]

# Tiny scriptlet, should reload udev if possible.
post_install_script = """
udevadm control --reload-rules || echo -e "\\033[0;31mReloading udev failed. You might need to reboot after installation.\\033[0m" 1>&2
udevadm trigger || echo -e "\\033[0;31mReloading udev failed. You might need to reboot after installation.\\033[0m" 1>&2
"""

#release = "1"

# Because we build under Ubuntu in CI, generate-rpm is unable to calculate the dependencies required (no access
# to rpm / yum), so we need to disable the auto and specify dependencies manually.
auto-req = "no"

[package.metadata.generate-rpm.requires]
# It should be noted, that bzip2 and libusb get statically linked against the binary, so they're not actually
# required, this leaves us with dbus and pulseaudio libs :)
dbus-libs = ">= 1.9.14"
pulseaudio-libs = ">= 10.0"

# Seriously Fedora?
"libspeechd.so.2()(64bit)" = "*"

[package.metadata.generate-rpm.variants.suse]
release = "suse"

# SuSE has the same general dependencies as anything RHEL
[package.metadata.generate-rpm.variants.suse.requires]
libdbus-1-3 = ">= 1.9.14"
libpulse0 = ">= 10.0"
speech-dispatcher = ">= 0.7"
