[package]
name = "goxlr-defaults"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common Workspace
clap = { workspace = true }
include_dir = { workspace = true }
