[package]
name = "goxlr-initialiser"
version = "1.2.2"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "Finds, checks and initialises any unconfigured GoXLR devices"
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
cfg-if = "1.0.0"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }

[target.'cfg(not(windows))'.dependencies]
anyhow = "1.0.86"
rusb = "0.9.4"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
xpc-connection-sys = { git = "https://github.com/dfrankland/xpc-connection-rs.git" }
