[package]
name = "goxlr-initialiser"
version = "1.2.3"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "Finds, checks and initialises any unconfigured GoXLR devices"
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "command-line-utilities"]

[dependencies]
# Common Workspace
tokio = { workspace = true }
cfg-if = { workspace = true }


[target.'cfg(not(windows))'.dependencies]
anyhow = { workspace = true }
rusb = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
xpc-connection-sys = { git = "https://github.com/dfrankland/xpc-connection-rs.git" }
