[package]
name = "goxlr-ipc"
version = "1.2.2"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>", "Craig McLure <craig@mclure.net>", "Lars Mühlbauer <lm41@dismail.de>"]
description = "An indirect interface to the TC-Helicon GoXLR & GoXLR Mini via IPC and a daemon."
repository = "https://github.com/GoXLR-on-Linux/GoXLR-Utility"
license = "MIT"
categories = ["hardware-support", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxlr-types = { path = "../types", features = ["serde"] }

# Common Workspace
anyhow = { workspace = true }
serde = { workspace = true }
json-patch = { workspace = true }
futures = { workspace = true }
enum-map = { workspace = true }
interprocess = { workspace = true }

tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tokio-serde = { version = "0.9.0", features = ["bincode", "json"] }
async-trait = "0.1.74"

# Used for Web Requests
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }