[package]
name = "goxlr-ipc"
description = "An indirect interface to the TC-Helicon GoXLR & GoXLR Mini via IPC and a daemon."
categories = ["hardware-support", "api-bindings"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goxlr-types = { path = "../types", features = ["serde"] }

# Common Workspace
anyhow = { workspace = true }
serde = { workspace = true }
json-patch = { workspace = true }
futures = { workspace = true }
enum-map = { workspace = true }
interprocess = { workspace = true }

tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
tokio-serde = { version = "0.9.0", features = ["bincode", "json"] }
async-trait = "0.1.89"

# Used for Web Requests
reqwest = { workspace = true, features = ["json"] }