[package]
name = "goxlr-launcher"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxlr-ipc = { path = "../ipc" }

# Common Workspace
anyhow = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
which = { workspace = true }

[target.'cfg(windows)'.dependencies]
tasklist = { git = "https://github.com/yalishandar/tasklist-rs.git" }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["process"] }
sysinfo = "0.30.13"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = { workspace = true }
