[package]
name = "goxlr-launcher"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
goxlr-ipc = { path = "../ipc" }

# Common Workspace
anyhow = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
which = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["process"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = { workspace = true }
