[package]
name = "goxlr-profile-loader"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common Workspace
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
enum-map = { workspace = true }

enum-map-derive = "0.17.0"
zip = { version = "2.1.5", default-features = false, features = ["deflate"] }
ritelinked = "0.3.2"
quick-xml = "0.36.1"
fastrand = "2.1.1"